# extractors

./: ignore-skills.txt  pyproject.toml  test.py
extractors/: __init__.py  category-test.py  category.py  conftest.py  dpatterns.py  extractor.py  freelancer-test.py  freelancer.py  lead-test.py  lead.py  markers.py  markers_test.py  match.py  nondev-test.py  nondev.py  patterns.py  ppatterns.py  spacyhelpers.py  student-test.py  student.py  tokenizer_test.py  utils.py  web.py  web_test.py  xpatterns.py
extractors/categories/: categorized.py  cattag.py  data.py  extractor.py  extractor_test.py
extractors/category/: category.py  category_test.py  data.py  extractor.py  extractor_test.py  freelancer.py  freelancer_test.py  labels.py  lead.py  lead_test.py  nondev.py  nondev_test.py  student.py  student_test.py
extractors/contacts/: contacts.py  contacts_test.py  email.py  email_test.py  extractor.py  extractor_test.py  phone.py  url.py  url_test.py
extractors/experience/: data.py  experience.py  extractor.py  extractor_test.py  tag.py
extractors/language/: detector.py  language_test.py
extractors/skills/: data.py  extractor.py  extractor_test.py  skill.py  tag.py  utils.py
extractors/skills/data/: adobe.py  all.py  amazon.py  apache.py  apple.py  certificates.py  cisco.py  companies.py  competences.py  google.py  hashicorp.py  industries.py  languages.py  large.py  microsoft.py  topics.py  topics1.py  topics2.py  yandex.py
extractors/title/: data.py  extractor.py  extractor_test.py  roletag.py
