[tool.poetry]
package-mode = true
name = "extractors"
version = "0.32.0"
description = ""
authors = ["DevScanr team <info@devscanr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest-describe = "^2.2.0"
markdown = "^3.7"
spacy = "^3.8.2"
lingua-language-detector = "^2.0.2"
urlextract = "^1.9.0"
beautifulsoup4 = "^4.12.3"
emoji = "^2.14.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pytest = "^8.3.2"
ruff = "^0.7.1"
types-beautifulsoup4 = "^4.12.0.20240907"
types-markdown = "^3.7.0.20240822"
# jupyterlab = "^4.2.5"

[tool.poe.env]
PYTHONPATH = "."

[tool.poe.tasks]
build = "poetry build --format=wheel"
tc = "poetry run mypy ."
test = "poetry run pytest --disable-warnings"
lint = "poetry run ruff check"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_calls = false
no_implicit_reexport = false
exclude = [
  "^ignore",
]

[tool.ruff.lint]
select = ["F", "B", "UP", "RUF"]
ignore = ["E701", "E711", "E712", "E731", "E741", "RUF001", "RUF003"]
per-file-ignores = {"__init__.py" = ["F403"]}

[tool.pytest.ini_options]
addopts = "--ignore=ignore"
python_files = "*_test.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
